Quake finally somewhat working!!! huge memory leak in QuakeSdlRunner, not releasing frames